--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
         <div class="box">
             <div class="body">
-                <div class="imgContainer"> <img src="imgs/Among Us.png" alt=""> </div>
+                <div class="imgContainer"> <img src="imgs/Battle Ninja.png" alt=""> </div>
                 <div class="content d-flex flex-column align-items-center justify-content-center">
                     <div>
                         <p class="text-white fs-5">Among Us <i class="far fa-comments"></i> <i class="fas fa-book-reader"></i></p>
