--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="mx-auto"></div>
     <ul class="navbar-nav">
         <li class="nav-item active">
-            <a href="g" class="nav-link text-dark fs-5" >Games</a>
+            <a href="https://gameleonpptgames.github.io/" class="nav-link text-dark fs-5" >Games</a>
           </li>
       <li class="nav-item">
       <a href="https://gameleonpptgames.github.io/contact/" class="nav-link text-dark fs-5">Contact</a>
