--- a/imgs/index.html
+++ b/imgs/index.html
@@ -40,7 +40,7 @@
     <div class="mx-auto"></div>
     <ul class="navbar-nav">
         <li class="nav-item active">
-            <a href="g" class="nav-link text-dark fs-5" >Games</a>
+            <a href="https://gameleonpptgames.github.io/games/" class="nav-link text-dark fs-5" >Games</a>
           </li>
       <li class="nav-item">
       <a href="https://gameleonpptgames.github.io/contact/" class="nav-link text-dark fs-5">Contact</a>
@@ -63,7 +63,7 @@
     <div class="container d-flex align-items-center justify-content-center flex-wrap">
         <div class="box">
             <div class="body">
-                <div class="imgContainer"> <img src="imgs/vocab in songs.png" alt=""> </div>
+                <div class="imgContainer"> <img src="vocab in songs.png" alt=""> </div>
                 <div class="content d-flex flex-column align-items-center justify-content-center">
                     <div>
                         <p class="text-white fs-5">Vocab in Songs <i class="fas fa-headphones-alt"></i> <i class="fas fa-book-reader"></i></p>
@@ -75,7 +75,7 @@
         </div>
         <div class="box">
             <div class="body">
-                <div class="imgContainer"> <img src="imgs/cwacomcovernew.png" alt=""> </div>
+                <div class="imgContainer"> <img src="cwacomcovernew.png" alt=""> </div>
                 <div class="content d-flex flex-column align-items-center justify-content-center">
                     <div>
                         <p class="text-white fs-5">Letter Drops <i class="far fa-edit"></i></p>
@@ -87,7 +87,7 @@
         </div>
         <div class="box">
             <div class="body">
-                <div class="imgContainer"> <img src="imgs/Grab Game.png" alt=""> </div>
+                <div class="imgContainer"> <img src="Grab Game.png" alt=""> </div>
                 <div class="content d-flex flex-column align-items-center justify-content-center">
                     <div>
                         <p class="text-white fs-5">Grab Game <i class="fas fa-headphones-alt"></i> <i class="fas fa-book-reader"></i></p>
@@ -100,7 +100,7 @@
 
         <div class="box">
             <div class="body">
-                <div class="imgContainer"> <img src="imgs/Squid Game.png" alt=""> </div>
+                <div class="imgContainer"> <img src="Squid Game.png" alt=""> </div>
                 <div class="content d-flex flex-column align-items-center justify-content-center">
                     <div>
                         <p class="text-white fs-5">Squid Game  <i class="fas fa-headphones-alt"></i> <i class="fas fa-book-reader"></i></p> 
@@ -112,7 +112,7 @@
         </div>
         <div class="box">
             <div class="body">
-                <div class="imgContainer"> <img src="imgs/Among Us.png" alt=""> </div>
+                <div class="imgContainer"> <img src="Among Us.png" alt=""> </div>
                 <div class="content d-flex flex-column align-items-center justify-content-center">
                     <div>
                         <p class="text-white fs-5">Among Us <i class="far fa-comments"></i> <i class="fas fa-book-reader"></i></p>
@@ -124,7 +124,7 @@
         </div>
         <div class="box">
             <div class="body">
-                <div class="imgContainer"> <img src="imgs/Inside Out.png" alt=""> </div>
+                <div class="imgContainer"> <img src="Inside Out.png" alt=""> </div>
                 <div class="content d-flex flex-column align-items-center justify-content-center">
                     <div>
                         <p class="text-white fs-5">Inside Out <i class="fas fa-book-reader"></i> <i class="far fa-comments"></i></p>
@@ -136,7 +136,7 @@
         </div>
         <div class="box">
             <div class="body">
-                <div class="imgContainer"> <img src="imgs/Battle Ninja.png" alt=""> </div>
+                <div class="imgContainer"> <img src="Battle Ninja.png" alt=""> </div>
                 <div class="content d-flex flex-column align-items-center justify-content-center">
                     <div>
                         <p class="text-white fs-5">Battle Ninja <i class="fas fa-headphones-alt"></i></p>
@@ -148,7 +148,7 @@
         </div>
         <div class="box">
             <div class="body">
-                <div class="imgContainer"> <img src="imgs/Brawl Stars.png" alt=""> </div>
+                <div class="imgContainer"> <img src="Brawl Stars.png" alt=""> </div>
                 <div class="content d-flex flex-column align-items-center justify-content-center">
                     <div>
                         <p class="text-white fs-5">Brawl Stars <i class="far fa-comments"></i> <i class="fas fa-book-reader"></i></p>
@@ -160,7 +160,7 @@
         </div>
         <div class="box">
             <div class="body">
-                <div class="imgContainer"> <img src="imgs/Minecreaft maze game.png" alt=""> </div>
+                <div class="imgContainer"> <img src="Minecreaft maze game.png" alt=""> </div>
                 <div class="content d-flex flex-column align-items-center justify-content-center">
                     <div>
                         <p class="text-white fs-5">Minecraft Maze <i class="far fa-comments"></i> <i class="fas fa-book-reader"></i></p>
@@ -172,7 +172,7 @@
         </div>
         <div class="box">
             <div class="body">
-                <div class="imgContainer"> <img src="imgs/Clash Royale.png" alt=""> </div>
+                <div class="imgContainer"> <img src="Clash Royale.png" alt=""> </div>
                 <div class="content d-flex flex-column align-items-center justify-content-center">
                     <div>
                         <p class="text-white fs-5">Clash Royale <i class="far fa-comments"></i> <i class="fas fa-book-reader"></i> <i class="fas fa-headphones-alt"></i> <i class="far fa-edit"></i></p> 
@@ -184,7 +184,7 @@
         </div>
         <div class="box">
             <div class="body">
-                <div class="imgContainer"> <img src="imgs/Frozen .png" alt=""> </div>
+                <div class="imgContainer"> <img src="Frozen.png" alt=""> </div>
                 <div class="content d-flex flex-column align-items-center justify-content-center">
                     <div>
                         <p class="text-white fs-5">Frozen Phone Talk <i class="far fa-comments"></i> <i class="fas fa-book-reader"></i></p>
@@ -196,7 +196,7 @@
         </div>
         <div class="box">
             <div class="body">
-                <div class="imgContainer"> <img src="imgs/Toy Story.png" alt=""> </div>
+                <div class="imgContainer"> <img src="Toy Story.png" alt=""> </div>
                 <div class="content d-flex flex-column align-items-center justify-content-center">
                     <div>
                         <p class="text-white fs-5">Cowboy Showdown <i class="far fa-comments"></i> <i class="fas fa-book-reader"></i></p>
