--- a/imgs/index.html
+++ b/imgs/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="gamesstyle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    <link rel="icon" type="image/png" href="imgs/Pink cube icon.png"> 
+    <link rel="icon" type="image/png" href="Pink cube icon.png"> 
     <title> Games | Gameleon</title>
 </head>
 <body>
@@ -22,7 +22,7 @@
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark p-md-2">
     <div class="container">
       <a href="https://gameleonpptgames.github.io/" class="navbar-brand">
-        <img src="imgs/chameleon origami.png" id="logo" alt="" style="width: 5.5rem; height: 3rem;">
+        <img src="chameleon origami.png" id="logo" alt="" style="width: 5.5rem; height: 3rem;">
       </a>
       <button
         type="button"
