--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <a href="https://gameleonpptgames.github.io/about/" class="nav-link text-dark fs-5">About</a>
     </li>
     <li class="nav-item">
-      <a href="https://gameleonpptgames.github.io/home/" class="nav-link text-dark fs-5">Home</a>
+      <a href="https://gameleonpptgames.github.io/" class="nav-link text-dark fs-5">Home</a>
     </li>
     </ul>
   </div>
