--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="container d-flex align-items-center justify-content-center flex-wrap">
         <div class="box">
             <div class="body">
-                <div class="imgContainer"> <img src="./imgs/vocab in songs.png" alt="img-unresponsive"> </div>
+                <div class="imgContainer"> <img src="imgs/vocab in songs.png" alt="img-unresponsive"> </div>
                 <div class="content d-flex flex-column align-items-center justify-content-center">
                     <div>
                         <p class="text-white fs-5">Vocab in Songs <i class="fas fa-headphones-alt"></i> <i class="fas fa-book-reader"></i></p>
