--- a/index.html
+++ b/index.html
@@ -63,13 +63,12 @@
     <div class="container d-flex align-items-center justify-content-center flex-wrap">
         <div class="box">
             <div class="body">
-                <div class="imgContainer"> <img src="imgs/vocab in songs.png" alt="img-unresponsive"> 
+                <div class="imgContainer"> <img src="imgs/vocab in songs.png" alt="img-unresponsive"></div>
                 <div class="content d-flex flex-column align-items-center justify-content-center">
                     <div>
                         <p class="text-white fs-5">Vocab in Songs <i class="fas fa-headphones-alt"></i> <i class="fas fa-book-reader"></i></p>
                         <p class="fs-6 text-white text-center">Play the game individually or as a team. Students listen to a song and try to hear the vocabulary word that completes the verse. Teacher will then reveal the answer. Correct student or team gets a point.</p>
                         <a href="https://1drv.ms/p/s!AugZo2FEMtwQj1NZDRL9JeA7u0_z?e=Bq3QaL" target="_blank" class="btn">Download</a>
-                    </div>
                     </div>
                 </div>
             </div>
