--- a/index.html
+++ b/index.html
@@ -203,6 +203,15 @@
                         <p class="fs-6 text-white">Divide your class into teams. Each round, one student from each team stands up and faces away from the screen. When the teacher says, "Showdown!" they turn around and look at the screen. The first student to read the word or sentence gets a point for the team.</p>
                         <a href="https://1drv.ms/p/s!AugZo2FEMtwQj1p66gbgCViwIDsD?e=OMOpy6" target="_blank" class="btn">Download</a>
                     </div>
+                     <div class="box">
+            <div class="body">
+                <div class="imgContainer"> <img src="imgs/Donkey Kong (Slammin' sentences).png" alt="img-unresponsive"> </div>
+                <div class="content d-flex flex-column align-items-center justify-content-center">
+                    <div>
+                        <p class="text-white fs-5">Slammin' Sentences <i class="far fa-comments"></i> <i class="fas fa-book-reader"></i></p>
+                        <p class="fs-6 text-white">description</p>
+                        <a href="https://1drv.ms/p/s!AugZo2FEMtwQj1x56wPvDHpnxAu0?e=iITh4k" target="_blank" class="btn">Download</a>
+                    </div>
                 </div>
             </div>
         </div>
