Fixed description error

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 <div class="content d-flex flex-column align-items-center justify-content-center">
                     <div>
                         <p class="text-white fs-5">Slammin' Sentences <i class="far fa-comments"></i> <i class="fas fa-book-reader"></i></p>
-                        <p class="fs-6 text-white">Game is played individually. Each student chooses a word or phrase that makes a complete sentence. Points depend on whether the student chose the path that creates a grammatically correct sentence. The student with the most points wins! *writing sheet not included*</p>
+                        <p class="fs-6 text-white">Game is played individually. Each student chooses a word or phrase that makes a complete sentence. Points depend on whether the student chose the path that creates a grammatically correct sentence. *writing sheet not included*</p>
                         <a href="https://1drv.ms/p/s!AugZo2FEMtwQj1x56wPvDHpnxAu0?e=iITh4k" target="_blank" class="btn">Download</a>
                     </div>
                 </div>
